--- a/stib-administraciones/templates/relaciones/notificaciones_edificio.html
+++ b/stib-administraciones/templates/relaciones/notificaciones_edificio.html
@@ -22,7 +22,7 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">
-                Sugerencias - {{edificio.nombre}}
+                <i class="fa fa-bullhorn fa-fw"></i> Sugerencias - {{edificio.nombre}}
             </h1>
         </div>
     </div>
@@ -90,7 +90,58 @@
                 </div><!-- / tab de prductos -->
                 <!-- tab de servicios -->
                 <div class="tab-pane" id="servicios_tab">
-                    <p>orange orange orange orange orange</p>
+                    <!-- tab de prductos -->
+                <div class="tab-pane active" id="productos_tab">
+                    <br>
+                    {% if notificaciones_servicios %}
+                        {% autoescape off %}
+                        <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered">
+                            <thead>
+                                <tr>
+                                    <th></th>
+                                    <th>Título</th>
+                                    <th>Descripción</th>
+                                    <th>Servicio</th>
+                                    <th>Fecha</th>
+                                    <th>Estado</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for ns in notificaciones_servicios %}
+                                    <tr {% if ns.leido == False %} style="font-weight:bold" {% endif %}>
+                                        <td>
+                                            {% if ns.leido == False %}
+                                                <i class="fa fa-envelope"></i>
+                                            {% else %}
+                                                <i class="fa fa-inbox"></i>
+                                            {% endif %}
+                                        </td>
+                                        <td>{{ns.titulo}}</td>
+                                        <td>
+                                            {{ns.descripcion|truncatechars:15}}
+                                            {% if ns.descripcion|length > 15 %}
+                                            {% show_popover_descripcion ns.descripcion %}
+                                            {% endif %}
+                                        </td>
+                                        <td>{{ns.servicio.nombre}}</td>
+                                        <td>{{ns.creado|date:"SHORT_DATE_FORMAT"}}</td>
+                                        <td>{{ns.estado|mostrar_estados}}</td>
+                                        <td>
+                                            <a class="btn btn-success" href="{% url 'notificaciones:edificios-servicios-detail' ns.id %}">Ver</a>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    {% paginate %}
+                    {% endautoescape %}
+                    {% else %}
+                        <div class="alert alert-dismissable alert-error">
+                            <i class="fa fa-exclamation-triangle"></i>
+                            Aún no tienes ninguna sugerencia de servicios.
+                        </div>
+                    {% endif %}
                 </div><!-- / tab de servicios -->
 
             </div>
