--- a/stib-administraciones/templates/notas_tecnicas/notastecnicas_detail.html
+++ b/stib-administraciones/templates/notas_tecnicas/notastecnicas_detail.html
@@ -2,6 +2,7 @@
 {% load relaciones_tags %}
 {% load thumbnail %}
 {% load staticfiles %}
+{% load comments %}
 
 {% block title %} Nota técnica {% endblock %}
 
@@ -9,10 +10,9 @@
     {% autoescape off %}
         <div class="row">
             <div class="col-lg-12">
-                    <h1 class="page-header">
-                        <a href="#">{{ object.titulo }}</a>
-                    </h1>
-                </div>
+                <h1 class="page-header">
+                    <a href="#">{{ object.titulo }}</a>
+                </h1>
             </div>
             <div class="row">
                 <div class="col-lg-12">
@@ -105,6 +105,16 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-12">
+                {% render_comment_list for object %}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-9">
+                {% render_comment_form for object %}
+            </div>
+        </div>
     {% endautoescape %}
 
     <div class="modal fade" id="modal_nota_tecnica_estado">
@@ -135,7 +145,6 @@
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div>
-
 {% endblock %}
 
 {% block javascript %}
