Refactor y Envio de correo al enviar comentarios WIP.

--- a/stib-administraciones/templates/notas_tecnicas/notastecnicas_detail.html
+++ b/stib-administraciones/templates/notas_tecnicas/notastecnicas_detail.html
@@ -158,25 +158,5 @@
 
 {% block javascript %}
     {{ block.super }}
-    <script>
-        $(function() {
-             $('#aceptar_nota_tecnica').click(function(){
-                $("#estado").val("2");
-                $("#estado_name").html("Aceptar");
-                $("#modal_nota_tecnica_estado").modal("show");
-            });
-
-            $('#cancelar_nota_tecnica').click(function(){
-                $("#estado").val("4");
-                $("#estado_name").html("Cancelar");
-                $("#modal_nota_tecnica_estado").modal("show");
-            });
-
-            $('#pendiente_nota_tecnica').click(function(){
-                $("#estado").val("3");
-                $("#estado_name").html("Mantener Pendiente");
-                $("#modal_nota_tecnica_estado").modal("show");
-            });
-        });
-    </script>
+    <script src="{% static 'js/notas_tecnicas.js' %}"></script>
 {% endblock javascript %}
