--- a/stib-administraciones/templates/relaciones/notificaciones_administraciones_detail.html
+++ b/stib-administraciones/templates/relaciones/notificaciones_administraciones_detail.html
@@ -130,19 +130,5 @@
 
 {% block javascript %}
     {{ block.super }}
-    <script>
-        $(function() {
-             $('#aceptar_notificacion').click(function(){
-                $("#estado").val("2");
-                $("#estado_name").html("Aceptar");
-                $("#modal_envio_cambio_estado").modal("show");
-            });
-
-            $('#cancelar_notificacion').click(function(){
-                $("#estado").val("4");
-                $("#estado_name").html("Cancelar");
-                $("#modal_envio_cambio_estado").modal("show");
-            });
-        });
-    </script>
+    <script src="{% static 'js/notificaciones.js' %}"></script>
 {% endblock javascript %}
