--- a/stib-administraciones/templates/productos/productos_detail.html
+++ b/stib-administraciones/templates/productos/productos_detail.html
@@ -85,6 +85,8 @@
         <div class="col-lg-12">
             <h1 class="page-header">Otros productos</h1>
         </div>
+    </div>
+    <div class="row">
         {% for otro_producto in otros_productos %}
             <div class="col-lg-4">
                 <div class="panel panel-primary" style="height: 400px">
