--- a/stib-administraciones/templates/productos/productos_detail.html
+++ b/stib-administraciones/templates/productos/productos_detail.html
@@ -89,6 +89,7 @@
     <div class="row">
         {% for otro_producto in otros_productos %}
             <div class="col-lg-4">
+                <!--
                 <div class="panel panel-primary" style="height: 400px">
                     <div class="panel-heading">
                       <i class="fa fa-archive"></i> {{otro_producto.nombre}}
@@ -105,8 +106,9 @@
                         </div>
                         <a class="btn btn-success" href="{% url 'productos:detail' otro_producto.id %}">Visitar</a>
                     </div>
-                </div>
+                </div>-->
             </div>
+
         {% endfor %}
     </div>
 {% endblock %}
