productos page - fix div

--- a/stib-administraciones/templates/productos/productos_detail.html
+++ b/stib-administraciones/templates/productos/productos_detail.html
@@ -103,9 +103,9 @@
                         <!--<br>
                         <div class="well">
                             {% autoescape off %}{{ otro_producto.descripcion|truncatewords:20 }} {% endautoescape %}
-                        </div>
+                        </div>-->
                         <a class="btn btn-success" href="{% url 'productos:detail' otro_producto.id %}">Visitar</a>
-                        -->
+
                     </div>
                 </div>
             </div>
