--- a/stib-administraciones/templates/edificios/edificios_administraciones_detail.html
+++ b/stib-administraciones/templates/edificios/edificios_administraciones_detail.html
@@ -12,7 +12,9 @@
             <h1 class="page-header">
                 <i class="fa fa-building fa-fw"></i> {{ object.nombre }}
                 <div class="pull-right">
-                    <a id="open_recursos_modal"><i class="fa fa-cog"></i></a>
+                    <a id="open_recursos_modal" class="btn btn-link btn-lg btn-datos-clientes">
+                        Datos del Cliente <i class="fa fa-cog"></i>
+                    </a>
                 </div>
             </h1>
         </div>
