--- a/stib-administraciones/templates/feedbacks/feedbacks_form.html
+++ b/stib-administraciones/templates/feedbacks/feedbacks_form.html
@@ -10,8 +10,8 @@
         <h1 class="page-header">Dejános tu Feedback</h1>
     </div>
     <div class="col-lg-9">
-        <h3>Buenísimo que estás aca!! Significa que tenés algo que contarnos.</h3>
-                <br>
+        <h3>Si tenés algún comentario hacelo a través del siguiente formulario.</h3>
+        <br>
     </div>
 </div>
 <div class="row">
