--- a/stib-administraciones/templates/feedbacks/feedbacks_form.html
+++ b/stib-administraciones/templates/feedbacks/feedbacks_form.html
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-lg-9">
-        <h1 class="page-header">Dejános tu Feedback</h1>
+        <h1 class="page-header">Dejanos tu Feedback</h1>
     </div>
     <div class="col-lg-9">
         <h3>Si tenés algún comentario hacelo a través del siguiente formulario.</h3>
