Notas tecnicas como 'trabajo realizado'.

--- a/stib_administraciones/templates/notas_tecnicas/notastecnicas_list.html
+++ b/stib_administraciones/templates/notas_tecnicas/notastecnicas_list.html
@@ -140,6 +140,11 @@
                                                 </a>
                                             </li>
                                             <li>
+                                                <a href="{% url 'notas-tecnicas:trabajo-realizado' nota_tecnica.id %}">
+                                                    <i class="fa fa-wrench"></i> Trabajo Realizado
+                                                </a>
+                                            </li>
+                                            <li>
                                                 <a href="{% url 'notas-tecnicas:reenviar-mail' nota_tecnica.id %}">
                                                     <i class="fa fa-share"></i> Reenviar Email
                                                 </a>
