Fix email notas tecnicas

--- a/stib_administraciones/templates/emails/email_notas_tecnicas.html
+++ b/stib_administraciones/templates/emails/email_notas_tecnicas.html
@@ -1,5 +1,7 @@
 Estimado cliente:<br>
-Le informamos que cuenta con una nueva nota técnica, para verla, haga click
-<a href="{{link_vista}}">aquí</a>.
+
+Le informamos que cuenta con una nueva nota técnica del cliente {{edificio}},
+para verla, haga click <a href="{{link_vista}}">aquí</a>.
+
 <br><br>
-Saludo atte.
+Saluda atentamente equipo técnico y administrativo Stib SRL
