--- a/stib_administraciones/templates/_menu_lateral.html
+++ b/stib_administraciones/templates/_menu_lateral.html
@@ -79,6 +79,9 @@
                     <li>
                         <a href="{% url 'notificaciones:administracion' %}"><i class="fa fa-bullhorn fa-fw"></i> Novedades de Stib</a>
                     </li>
+                    <li>
+                        <a href="#" id="open_soporte_modal"><i class="fa fa-life-ring"></i> Soporte</a>
+                    </li>
                 {% endif %}
             {% endif %}
 
@@ -122,4 +125,27 @@
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
 </div><!-- / modal 'notificaciones' -->
+
+
+<!-- modal 'Soporte' -->
+<div class="modal fade" id="soporte_modal">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">
+                    <i class="fa fa-life-ring"></i> Soporte
+                </h4>
+            </div>
+            <div class="modal-body">
+                    <div class="alert alert-dismissable alert-error">
+                        <h4>Llamá, hay gente disponible para ayudarte.</h4>
+                        <i class="fa fa-phone"></i> 4828812
+                        <br>
+                        <i class="fa fa-clock-o"></i> 8 a 18.30hs
+                    </div>
+            </div>
+        </div>
+    </div>
+</div><!-- modal 'Soporte' -->
 
