--- a/stib_administraciones/templates/_menu_lateral.html
+++ b/stib_administraciones/templates/_menu_lateral.html
@@ -129,7 +129,7 @@
 
 <!-- modal 'Soporte' -->
 <div class="modal fade" id="soporte_modal">
-    <div class="modal-dialog modal-sm">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
