Agrego NOTA en el formulario de llaves.

--- a/stib_administraciones/templates/llaves/llaves_form.html
+++ b/stib_administraciones/templates/llaves/llaves_form.html
@@ -18,7 +18,10 @@
             <div class="alert alert-dismissable alert-info">
 	            <i class="fa fa-exclamation-triangle"></i>
                 Seleccione las llaves con las que cuenta el edificio, también puede dejarnos
-                un comentario.
+                un comentario.<br>
+                <i class="fa fa-exclamation-triangle"></i>
+                Las llaves que figuran aquí son las que la empresa STIB tiene en su poder,
+                no corresponden a llaves adicionales que tenga la Administración.
             </div>
 
             <form class="form-horizontal" method="post">
