--- a/stib_administraciones/templates/_menu_lateral.html
+++ b/stib_administraciones/templates/_menu_lateral.html
@@ -80,7 +80,10 @@
                         <a href="{% url 'notificaciones:administracion' %}"><i class="fa fa-bullhorn fa-fw"></i> Novedades de Stib</a>
                     </li>
                     <li>
-                        <a href="#" id="open_soporte_modal"><i class="fa fa-life-ring"></i> Soporte</a>
+                        <a href="/ayuda"><i class="fa fa-life-ring"></i> Ayuda</a>
+                    </li>
+                    <li>
+                        <a href="#" id="open_soporte_modal"><i class="fa fa-headphones"></i> Soporte</a>
                     </li>
                 {% endif %}
             {% endif %}
